target/fabric8/deployment.yml
apiVersion: v1
kind: Deployment
metadata:
  name: spring-openshift
spec:
  template:
    spec:
      containers:
        - env:
            - name: MY_DATABASE_SERVICE_HOST
              value: my-database.myproject.svc.cluster.local
            - name: MY_DATABASE_SERVICE_PORT
              value: 5432
            - name: DB_USERNAME
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: user
            - name: DB_PASSWORD
              valueFrom:
                 secretKeyRef:
                   name: my-database-secret
                   key: password
            - name: JAVA_OPTIONS
              value: "-Dspring.profiles.active=openshift"
