target/fabric8/route.yml
apiVersion: v1
kind: Route
metadata:
  name: spring-openshift
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: spring-openshift
